--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "url": "https://github.com/hagmanen/js_training"
   },
   "dependencies": {
-    "express": "*",
-    "body-parser": "*"
+    "express": "4.12.2",
+    "body-parser": "1.12.0",
+    "socket.io": "1.3.5"
   },
   "devDependencies": {
   },
